# financial_app

./: .gitignore  Cargo.toml
src/: main.rs  structs.rs
src/handlers/: get_handlers.rs  mod.rs
src/structs/: aevoinfo.rs  request.rs  response.rs
