[package]
name = "back_end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4.3.1", features = ["openssl"]}
diesel = "2.1.0"
reqwest = "0.11.22"
tokio = { version = "1.35.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plotters = "0.3.5"
actix = "0.13.1"
openssl = "0.10.61"
